# data-projects-portfolio

./: 404.html  README.md  _config.yml  feed.xml  index.html  pyproject.toml  robots.txt  sitemap.xml
_action_files/: settings.ini
_fastpages_docs/: _setup_pr_template.md
_notebooks/: 2019-12-12-london-crime-prediction.ipynb  2021-06-21-wine-price-prediction.ipynb  2021-09-08-ab-countries-of-the-world.ipynb  2021-09-08-tl-spotify-genre-and-popularity-prediction.ipynb
about/: index.html
assets/css/: style.css.map
assets/js/: search-data.json  search.js
categories/: index.html
data-science-project/2021/09/08/: ab-countries-of-the-world.html
fastpages/jupyter/2019/12/12/: london-crime-prediction.html
fastpages/jupyter/2021/09/07/: _london_crime_brainstation_data_science_project.html
fastpages/jupyter/2021/09/08/: tl-spotify-genre-and-popularity-prediction.html
jupyter/2020/02/20/: test.html
markdown/2020/01/14/: test-markdown-post.html
search/: index.html
