[tool.poetry]
name = "data-projects-portfolio"
version = "0.1.0"
description = ""
authors = ["Shifath Nafis <694029+snafis@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "data_projects_portfolio"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.2"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
plotly = "^5.3.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.1.11"
jupyter = "^1.0.0"
ipykernel = "^6.3.1"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
